# autosupport_agent

./: .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 001_baseline.py
api/: __init__.py  agents.py  analytics.py  auth.py  integrations.py  queue.py  system.py  tickets.py  users.py
core/: config.py  exceptions.py  logging.py  metrics.py  middleware.py  rate_limit.py  retry.py  security.py
db/: __init__.py  pool.py  store.py
domain/: bus.py  events.py  ticket.py
integrations/: __init__.py  base.py  webhook.py
intelligence/: __init__.py  llm_client.py  router.py  rules_engine.py
models/: __init__.py  sla.py  ticket.py  user.py
plugins/: base.py  signal_audit.py
services/: integration_service.py  sla_service.py  ticket_service.py  user_service.py
support_agents/: __init__.py  auto_router.py  escalation_detector.py  priority_predictor.py  response_suggester.py  ticket_classifier.py
tasks/: classify.py  worker.py
templates/: dashboard.html
tests/: conftest.py  test_api.py  test_domain.py  test_pipeline.py
workflows/: engine.py
