[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autosupport"
version = "4.0.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "PyJWT>=2.8.0",
    "prometheus-client>=0.20.0",
    "asyncpg>=0.29.0",
    "arq>=0.25.0",
    "redis>=5.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.9",
    "email-validator>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "httpx>=0.27.0",
]

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "api",
    "api.*",
    "core",
    "core.*",
    "db",
    "db.*",
    "domain",
    "domain.*",
    "integrations",
    "integrations.*",
    "intelligence",
    "intelligence.*",
    "models",
    "models.*",
    "plugins",
    "plugins.*",
    "services",
    "services.*",
    "support_agents",
    "support_agents.*",
    "tasks",
    "tasks.*",
    "workflows",
    "workflows.*",
]
exclude = [
    "alembic",
    "alembic.*",
    "tests",
    "tests.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
